# agent-of-empires

./: .coderabbit.yaml  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CHANGES_QWEN_CODE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  DESIGN-WEB.md  DESIGN.md  README.md  TEST_CHANGE.md  book.toml  build.rs  cliff.toml  codecov.yml  credits.json  deny.toml  flake.nix
.aoe/: config.toml
.cargo/: config.toml
.entire/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.planning/: MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md
.serena/: project.yml
assets/: create_gif.sh  demo.tape
bundled_sounds/: README.md
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/src/: main.rs  qr.rs  tray.rs
docker/: Dockerfile  Dockerfile.dev
docs/: SUMMARY.md  api.md  cli-quickstart.md  cockpit.md  compare.md  credits.md  development.md  extras.md  features.md  github-integration.md  index.md  installation.md  openclaw-integration.md  push-notifications.md  quick-start.md  sounds.md  web-feature-parity.md  worktree-quick-reference.md
history/: plan-context-primer.md  plan-diff-comments.md  plan-substrate-switching.md
scripts/: build-site.sh  capture-fixtures.sh  demo-web.sh  generate-credits.js  install.sh  release_metrics.sh  update-formula.sh
src/: agents.rs  avk_agents.rs  claude_settings.rs  file_watch.rs  lib.rs  logging.rs  main.rs  sound.rs  status_hooks.rs  task_util.rs
tests/: cockpit_acp_smoke.rs  cockpit_midturn_resume.rs  cockpit_silent_orphan.rs  (+26 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+1095 files in other folders)
