[package]
name = "aoe-desktop"
version = "0.1.0"
edition = "2021"
description = "Agent of Empires desktop app (Tauri)"
license = "MIT"

[dependencies]
agent-of-empires = { path = "..", features = ["serve"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["full"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
local-ip-address = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
tracing = "0.1"
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
