[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agent-of-empires = { path = "..", features = ["serve"] }
clap = { version = "4.6", features = ["derive"] }
clap-markdown = "0.1"
regex = "1"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
